# marketplace-crew-sales-contact-finder

./: .env.example  .gitignore  README.md  pyproject.toml
src/sales_contact_finder_crew/: crew.py  main.py
src/sales_contact_finder_crew/config/: agents.yaml  tasks.yaml
src/sales_contact_finder_crew/tools/: contact_storage_tool.py
